--- a/Appendix1.tex
+++ b/Appendix1.tex
@@ -7,3 +7,10 @@ Thesis document from Inge\\
 Links to Wikipedia\\
 The algorithm course book..\\
 Example XML document (article) - to show what the XML documents look like.
+
+An example of comparing two articles with LCS.
+
+\begin{sidewaysfigure}
+	\includegraphics[scale=0.65]{figures/LcsExample}
+	\caption{Diagram showing the result of two article being compared by using LCS.}
+\end{sidewaysfigure}
