--- a/ArticleContent.tex
+++ b/ArticleContent.tex
@@ -1,55 +1,6 @@
-@online { EuropaValg,
-	author = {Albrechtsen, Rikke},
-	title = {Messerschmidt: Ja-partierne taler vælgerne efter munden},
-	year = {2014},
-	howpublished = {\url{http://www.altinget.dk/eu/artikel/messerschmidt-ja-partierne-taler-vaelgerne-efter-munden}},
-	note = {Accessed: 2014-05-20}
-}
+\chapter{Article Content}
 
-@online {InfomediaEpKandidater,
-	author = {Infomedia},
-	title = {Top 10: Kandidaternes synlighed i medierne},
-	year = 2014,
-	howpublished = {\url{http://www.infomedia.dk/viden-indsigt/europaparlamentsvalg-og-patentdomstolsafstemning-kandidaternes-synlighed-i-medierne}},
-	note = {Accessed: 2014-05-20}
-}
-
-@online {WikiTFIDF,
-	author= {Wikipedia},
-	title = {tf-idf},
-	year = 2014,
-	howpublished = {\url{http://en.wikipedia.org/wiki/Tf-idf}},
-	note = {Accessed: 2014-05-20}
-}
-
-@online {WikiLCS,
-	author = {Wikipedia},
-	title = {Algorithm Implementation/Strings/Longest common substring},
-	year = 2014,
-	howpublished = {\url{http://en.wikibooks.org/w/index.php?title=Algorithm_Implementation/Strings/Longest_common_substring&action=history}},
-	note = {Accessed: 2014-05-20}
-}
-
-@inproceedings {Slides,
-	author = {René Madsen and Niels Buus Lassen},
-	title = {Ensemble Classifiers},
-	year = 2014
-}
-
-@online {JV1,
-	author = {Johan Winther},
-	title = {Danfoss fastholder stabil forretning},
-	year = 2013,
-	howpublished = {\url{http://www.jv.dk/artikel/1633979:Business--Danfoss-fastholder-stabil-forretning},
-	note = {Accessed: 2014-05-20}
-}
-
-@article {Lemvig1,
-	author = {Johan Winther},
-	title = {Danfoss fasterhodler stabil forretning},
-	year = 2013,
-	journal = {folkebladetlemvig.dk},
-	abstract = {Termostatkæmpen Danfoss holder sit indtjeningsniveau, mens omsætningen falder en smule.
+"Termostatkæmpen Danfoss holder sit indtjeningsniveau, mens omsætningen falder en smule.
 	Ingen store dramaer i Danfoss.
 	Det kunne være overskriften på selskabets regnskab for årets første ni måneder. Omsætningen falder en smule fra til 25.528 mio. kroner i år mod 25.985 mio. kroner i samme periode sidste år, mens indtjeningen lander på 2.938 mio. kroner i år mod 2.952 mio. kroner sidste år.
 	Med andre ord en stabil forretning uden overraskelser, og det er koncernchef Niels B. Christiansen tilfreds med.
@@ -59,7 +10,4 @@
 	Den største vækst oplever Danfoss i Rusland og Brasilien, mens det kinesiske marked følger med i lavere tempo. Generelt forventer selskabet dog, at det globale marked vil være præget af lav vækst »et stykke tid endnu«. Og det åbner op for flere opkøb udover de seneste køb af Danfoss Turbocor og de sidste aktier i Sauer-Danfoss.
 	»Derfor kigger vi meget på, om vi kan styrke forretningen gennem fokus på nye markeder og opkøb - såvel af nye teknologier som virksomheder. Vi har styrken til at kunne finansiere sådanne opkøb. Det giver en stor handlefrihed og mulighed for at forbedre Danfoss' position yderligere,« forklarer Niels B. Christiansen.
 	For hele året venter Danfoss »beskeden vækst« i omsætning og indtjening.
-	Danfoss' koncernchef Niels B. Christiansen venter "beskeden vækst" i år.},
-	note = {Online content protected by payment wall}
-}
-	
+	Danfoss' koncernchef Niels B. Christiansen venter "beskeden vækst" i år"
