Added new parts to Implementation and Appendixes

--- a/Appendix1.tex
+++ b/Appendix1.tex
@@ -14,3 +14,13 @@ An example of comparing two articles with LCS.
 	\includegraphics[scale=0.65]{figures/LcsExample}
 	\caption{Diagram showing the result of two article being compared by using LCS.}
 \end{sidewaysfigure}
+
+\begin{sidewaysfigure}
+	\includegraphics[scale=0.5]{figures/PerfectMatch}
+	\caption{Diagram showing part of the result from running LCS on two articles that are almost a perfect match.}
+\end{sidewaysfigure}
+
+\begin{sidewaysfigure}
+	\includegraphics[scale=0.5]{figures/SubstringCollection}
+	\caption{Diagram showing part of the result of running LCS on two articles and marking up all substrings with a length larger than three words.}
+	\end{sidewaysfigure}
