--- a/ArticleContent.tex
+++ b/ArticleContent.tex
@@ -1,6 +1,7 @@
 \chapter{Article Content}
-
-"Termostatkæmpen Danfoss holder sit indtjeningsniveau, mens omsætningen falder en smule.
+\section{Danfoss fastholder stabil forretning}
+\label{Levmig1:text}
+	Termostatkæmpen Danfoss holder sit indtjeningsniveau, mens omsætningen falder en smule.
 	Ingen store dramaer i Danfoss.
 	Det kunne være overskriften på selskabets regnskab for årets første ni måneder. Omsætningen falder en smule fra til 25.528 mio. kroner i år mod 25.985 mio. kroner i samme periode sidste år, mens indtjeningen lander på 2.938 mio. kroner i år mod 2.952 mio. kroner sidste år.
 	Med andre ord en stabil forretning uden overraskelser, og det er koncernchef Niels B. Christiansen tilfreds med.
@@ -10,4 +11,8 @@
 	Den største vækst oplever Danfoss i Rusland og Brasilien, mens det kinesiske marked følger med i lavere tempo. Generelt forventer selskabet dog, at det globale marked vil være præget af lav vækst »et stykke tid endnu«. Og det åbner op for flere opkøb udover de seneste køb af Danfoss Turbocor og de sidste aktier i Sauer-Danfoss.
 	»Derfor kigger vi meget på, om vi kan styrke forretningen gennem fokus på nye markeder og opkøb - såvel af nye teknologier som virksomheder. Vi har styrken til at kunne finansiere sådanne opkøb. Det giver en stor handlefrihed og mulighed for at forbedre Danfoss' position yderligere,« forklarer Niels B. Christiansen.
 	For hele året venter Danfoss »beskeden vækst« i omsætning og indtjening.
-	Danfoss' koncernchef Niels B. Christiansen venter "beskeden vækst" i år"
+	Danfoss' koncernchef Niels B. Christiansen venter "beskeden vækst" i år".
+
+\section{Danfoss fastholder stabil forretning - w/o Stop Words}
+\label{Lemvig1:textFiltered}
+Termostatkæmpen Danfoss holder indtjeningsniveau, omsætningen falder smule. 	Ingen dramaer Danfoss. 	Det overskriften selskabets regnskab årets måneder. Omsætningen falder smule 25.528 mio. kroner 25.985 mio. kroner år, indtjeningen lander 2.938 mio. kroner 2.952 mio. kroner år. 	Med stabil forretning overraskelser, koncernchef Niels B. Christiansen tilfreds med. 	Takket strategiske fokus kerneforretning opveje kollapset solcellemarked faldende valutakurser. Det tilfredsstillende, formået tilpasse levere stærkt trods generelt markedsvækst, han. 	Selskabet anfører samtidig, korrigeret valutaeffekt Danfoss' samlede omsætning års niveau. 	Det europæiske solcellekollaps ellers ramt Danfoss hårdt, selskabet producerer invertere solcelleanlæg. Og solcellemarkedet blandt årsager til, Danfoss måneder skar fyrede 69 medarbejdere Danmark. 	Den største vækst oplever Danfoss Rusland Brasilien, kinesiske følger lavere tempo. Generelt forventer selskabet dog, globale præget vækst endnu. Og åbner opkøb udover seneste køb Danfoss Turbocor aktier Sauer-Danfoss. 	Derfor kigger på, styrke forretningen gennem fokus markeder opkøb - såvel teknologier virksomheder. Vi styrken finansiere sådanne opkøb. Det giver handlefrihed forbedre Danfoss' position yderligere, forklarer Niels B. Christiansen. 	For året venter Danfoss »beskeden vækst« omsætning indtjening. 	Danfoss' koncernchef Niels B. Christiansen venter beskeden vækst år. 
