--- a/Preface.tex
+++ b/Preface.tex
@@ -6,6 +6,8 @@ The project is equal to 20 ECTS points.
 
 \textbf{This thesis is protected by confidentiality. No information from this thesis can be handed off to any party without signed permission.}
 
+\textbf{All excerpts from articles are owned by the respective authors / papers. }
+
 The thesis deals with the issue of finding articles that are duplicates in a large corpus of articles. This is done using various algorithms and is implemented in C\#.
 
 The thesis consists of ...
