--- a/Refs.bib
+++ b/Refs.bib
@@ -46,7 +46,7 @@
 
 @article {Lemvig1,
 	author = {Johan Winther},
-	title = {Danfoss fasterhodler stabil forretning},
+	title = {Danfoss fastholder stabil forretning},
 	year = 2013,
 	journal = {folkebladetlemvig.dk},
 	abstract = {Termostatkæmpen Danfoss holder sit indtjeningsniveau, mens omsætningen falder en smule.
@@ -60,6 +60,6 @@
 	»Derfor kigger vi meget på, om vi kan styrke forretningen gennem fokus på nye markeder og opkøb - såvel af nye teknologier som virksomheder. Vi har styrken til at kunne finansiere sådanne opkøb. Det giver en stor handlefrihed og mulighed for at forbedre Danfoss' position yderligere,« forklarer Niels B. Christiansen.
 	For hele året venter Danfoss »beskeden vækst« i omsætning og indtjening.
 	Danfoss' koncernchef Niels B. Christiansen venter "beskeden vækst" i år.},
-	note = {Online content protected by payment wall}
+	note = {Online content protected by payment wall, article text included in Appendix B.}
 }
 	
